<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/imgDescription">

    <TextView
        android:id="@+id/textViewWhereTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/textViewWhereFrom"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewWhereFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWhereTo"
        android:layout_marginTop="0dp"
        android:layout_marginStart="20dp"
        android:text="@string/textViewWhereTo"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageViewStar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imgDescription"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="370dp"
        android:layout_marginTop="15dp"
        android:text="@string/textViewNumber"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />
</RelativeLayout>